<resources>
    <string name="app_name">GangyunEngine</string>
    <string name="action_settings">Settings</string>
    <string name="action_custom">自定义</string>
    <string name="action_makeup">美人妆</string>
    <string name="action_makeupos">秀美妆</string>
    <string name="action_beautysnap">BeautySnap</string>
    <string name="action_chuanyin">传音</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string-array name="package_name_values">
        <item>com.gangyun.makeup</item>
        <item>com.gangyun.makeupos</item>
        <item>com.gangyun.beautysnap</item>
        <item>com.gangyun.camerabox</item>
        <item>com.gangyun.albumsdk</item>
        <item>com.gangyun.loverscamera</item>
        <item>com.gangyun.boyaacamera</item>
        <item>com.gangyun.chuanyin</item>
        <item>com.gy.cy</item>
    </string-array>

    <string-array name="activity_name_values">
        <item>com.gangyun.makeup.gallery3d.makeup.MakeUpActivity</item>
        <item>com.gangyun.gallery3d.makeup.MakeUpActivity</item>
        <item>com.gangyun.makeup.beautymakeup.BeautySnapMainActivity</item>
        <item>com.gangyun.gallery3d.editphoto.EditPhotoActivity</item>
        <item>com.gangyun.albumsdk.app.Gallery</item>
        <item>com.gangyun.sdk.decorate.DecorateActivity</item>
        <item>com.gangyun.sdk.imagebeauty.ImageBeautyActivity</item>
        <item>com.gangyun.camerasdk.CameraActivity</item>
        <item>com.gangyun.makeup.pluginFramework.WelcomeActivity</item>
        <item>com.gangyun.makeup.pluginFramework.PluginMainActivity</item>
    </string-array>

    <string-array name="key_name_values">
        <item>is_from_third_party</item>
        <item>from_system_camera</item>
        <item>goto_packname</item>
        <item>goto_path</item>
        <item>goto_post_processing</item>
        <item>is_finish</item>
        <item>makeup_module</item>
        <item>is_gallery</item>
        <item>is_beautysnappicture</item>
        <item>key_current_packname</item>
        <item>is_from_home</item>
    </string-array>

    <string-array name="value_name_values">
        <item>-1</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>true</item>
        <item>false</item>
        <item>0</item>
    </string-array>
</resources>
